--- a/css/jordonHQ.css
+++ b/css/jordonHQ.css
@@ -149,7 +149,7 @@ body {
 #jordonHQTitle {
 	color: white;
 	font-family: Delicious, Garamond;
-	font-size: 1em;
+	font-size: .8em;
 	text-align: center;
 	margin-top: -3.4em;
 }	
