--- a/css/jordonHQ.css
+++ b/css/jordonHQ.css
@@ -81,14 +81,15 @@ body {
 	background-color: #031d50;
 	position: absolute;
 	margin-left: 30.2em;
-	margin-top: .1em;
+	margin-top: .3em;
 }
 
 #familyTitle {
 	color: white;
 	font-family: Delicious, Garamond;
-	font-size: 1em;
+	font-size: .5em;
 	text-align: center;
+	margin-top: -1.5em;
 }
 
 /*#menuLeftMiddleBar{ 
@@ -143,7 +144,7 @@ body {
 	width: 7em;
 	height: 8.6em;
 	margin-top: -2em;
-	border-radius: .1em;
+	border-radius: .3em;
 }
 
 #jordonHQTitle {
@@ -151,7 +152,7 @@ body {
 	font-family: Delicious, Garamond;
 	font-size: .8em;
 	text-align: center;
-	margin-top: -3.4em;
+	margin-top: -1.4em;
 }	
 
 #games {
