--- a/css/jordonHQ.css
+++ b/css/jordonHQ.css
@@ -47,6 +47,7 @@ body {
 	font-family: Delicious, Garamond;
 	font-size: 1em;
 	text-align: center;
+	margin-top: -2.1em;
 }
 
 #church {
@@ -213,6 +214,7 @@ body {
 	font-family: Delicious, Garamond;
 	font-size: 1em;
 	text-align: center;
+	margin-top: -2.1em;
 }
 
 #music {
