Add icons to menu and nav, intro js

--- a/css/jordonHQ.css
+++ b/css/jordonHQ.css
@@ -154,7 +154,7 @@ section article a {
 }
 
 #family-icon {
-	background: #fff url("../images/family.jpg") no-repeat center center;
+	background: #fff url("../images/family.jpg") no-repeat top center;
 }
 
 #fitness-icon {
